# backbone

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  blockify.ktest  flatten.c  flatten.h  flatten.ktest  gen.ktest  gen_llvm.c  gen_llvm.h  ktest.py  main.c  makefile  map.h  map_test.c  normalize.ktest  output.ktest  parse.ktest  parser.c  parser.h  qualify.ktest  report.md  sexp.c  sexp.h  str.c  str.h  test.py
blockify-tests/: argcall.ok  become.ok  callstmt.ok  cc.ok  ccc.ok  csc.ok  csccc.ok  cscccc.ok  if_expr.ok  retcall.ok  slt.ok  tallvoid.ok
docs/: >= vs ==.md  auto.md  become.md  clang commands  dataflow.md  flatten.md  grammar.md  guidelines.md  makefile usage  musttail.md  normalize.md  notes on llvm  notes on llvm.md  parse tree.md  parser.md  report.md  report.tex  sexp structure and invariants.md  type switch pattern.md
examples/: README.md  hello.kc  hello.kl  main.bb  main.kl  main2.kl  sigabrt.kl  str.kl  string.kl  test.kl
flatten-tests/: become.bb  become.ok  call_call_call.ok  call_split_call.bb  call_split_call.ok  call_with_args.bb  call_with_args.ok  callstmt.bb  callstmt.ok  cc.ok  csc.bb  csccc.bb  cscccc.ok  makefile  return_call.ok  slt.ok  tallvoid.ok  test.py
gen-llvm-tests/: .gitignore  README.md  auto.bb  auto.ok.ll  hello.bb  if.bb  (+20 more)
src/: .gitignore  CMakeLists.txt  become.c  become.h  blockify.c  blockify.h  callstmt.c  callstmt.h  flatten.c  flatten.h  gen.c  gen.h  locals.c  locals.h  main.c  makefile  map.c  normalize.c  normalize.h  parser.c  parser.h  qualify.c  qualify.h  reader.c  reader.h  sexp.c  sexp.h  str.c  str.h
(+102 files in other folders)
